<?xml version="1.0"?>
<package format="2">
  <name>iturover_odometry_assignment</name>
  <version>1.0.0</version>
  <description>ITU ROVER Odometry assignment for ITU Rover 23'</description>


  <maintainer email="payzunburak@gmail.com">Burak Payzun</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
